--- a/styleGridRow.css
+++ b/styleGridRow.css
@@ -179,6 +179,7 @@ nav a:hover {
   height: 250px;
   position: sticky;
   top: 0;
+  grid-area: banner;
 }
 
 .housing-banner h2 {
@@ -209,11 +210,12 @@ nav a:hover {
   height: 250px;
   position: sticky;
   top: 0;
+  grid-area: banner;
 }
 
 .food-banner h2 {
   color: rgba(63, 73, 85);
-  background-color:rgba(241, 241, 241, 0.450) ;
+  background-color:rgba(241, 241, 241, 0.750) ;
   text-shadow: 2px 1px 2px white;
   text-transform: uppercase;
   letter-spacing: 1.5em;
